<resources>
    <string name="app_name">VoteSafe</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Autentificare</string>

    <!-- Strings related to login -->
    <string name="email_hint">Email</string>
    <string name="action_sign_in">Autentificare</string>
    <string name="title_main_activity">Alege categoria de vot</string>
    <string name="error_form">Introduceti informatii valide</string>
    <string name="password_hint">Parola</string>
    <string name="logout">Iesire</string>
    <string name="logged_in_user_label">Utilizator autentificat</string>
    <string name="ok_label">Ok</string>
    <string name="under_construction">In constructie</string>
    <string name="my_profile">Profilul meu</string>
    <string name="my_votes">Voturile mele</string>
    <string name="vote">Voteaza</string>
    <string name="dialog_info_title">Informatie</string>
    <string name="dialog_select_one_subcategory">Trebuie sa selectezi o categorie pentru a putea finaliza votul la aceasta categorie.</string>
    <string name="info_already_voted">Ati votat deja aceasta categorie.</string>
    <string name="my_votes_title">Voturile mele</string>
    <string name="no_votes_title">Nu ati efectuat niciun vot.</string>
</resources>
