<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/my_profile_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:padding="@dimen/padding_default">

        <ImageView
            android:layout_width="@dimen/drawer_icon"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/drawer_profile" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_medium"
            android:padding="@dimen/padding_default"
            android:text="@string/my_profile"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/font_size_large" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider" />

    <LinearLayout
        android:id="@+id/my_votes_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:padding="@dimen/padding_default">

        <ImageView
            android:layout_width="@dimen/drawer_icon"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/drawer_votes" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_medium"
            android:padding="@dimen/padding_default"
            android:text="@string/my_votes"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/font_size_large" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider" />

    <LinearLayout
        android:id="@+id/logout_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:padding="@dimen/padding_default">

        <ImageView
            android:layout_width="@dimen/drawer_icon"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/drawer_logout" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_medium"
            android:padding="@dimen/padding_default"
            android:text="@string/logout"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/font_size_large" />
    </LinearLayout>

</LinearLayout>